Add adsense script

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4608458965420345"
+     crossorigin="anonymous"></script>
+
     <title>iChef</title>
   </head>
   <body>
