--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4608458965420345"
      crossorigin="anonymous"></script>
 
-    <title>iChef</title>
+    <title>iChef Recipe Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
