--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="iChef Recipe Generator is an AI-powered recipe generator that uses your available ingredients or search query to create a unique recipe. Available in 6 different languages.">
+    <meta name="keywords" content="iChef, recipe generator, AI, artificial intelligence, ingredients, search, client-side, recipes, random, cook, dinner, lunch, meal, low carb, food, eat, hungry, hunger, snack, iChef, gerador de receitas, IA, inteligência artificial, ingredientes, pesquisa, lado do cliente, receitas, aleatório, cozinhar, jantar, almoço, refeição, baixo carboidrato, comer, com fome, fome, lanche,
+    generador de recetas, inteligencia artificial, busqueda, lado del cliente, recetas, aleatorio, cocinar, cena, almuerzo, comida, bajo en carbohidratos, comer, con hambre, hambre, bocadillo,
+    générateur de recettes, intelligence artificielle, ingrédients, recherche, côté client, recettes, aléatoire, cuisiner, dîner, déjeuner, repas, faible en glucides, nourriture, manger, faim, faim, collation,
+    ricetta generatore, intelligenza artificiale, ingredienti, ricerca, lato client, ricette, casuale, cucinare, cena, pranzo, pasto, basso contenuto di carboidrati, cibo, mangiare, fame, fame, spuntino,
+    reseptgeneratör, artificiell intelligens, ingredienser, sökning, klient, recept, slumpmässig, laga mat, middag, lunch, måltid, låg kolhydrat, mat, äta, hungrig, hunger, mellanmål">
+    
+    <meta name="author" content="Elton Alves Ribeiro">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"      name="ichef"
       content="Generate unlimited recipes from your ingredients"
     />
