--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="iChef Recipe Generator is an AI-powered recipe generator that uses your available ingredients or search query to create a unique recipe. Available in 6 different languages.">
+    <link rel="canonical" href="https://www.ichef.pt" />
     <meta name="keywords" content="Elton, Alves, Ribeiro, Elton Alves Ribeiro, iChef, ai recipe generator, recipe generator, AI, artificial intelligence, ingredients, search, client-side, recipes, random, cook, dinner, lunch, meal, low carb, food, eat, hungry, hunger, snack, iChef, gerador de receitas, IA, inteligência artificial, ingredientes, pesquisa, lado do cliente, receitas, aleatório, cozinhar, jantar, almoço, refeição, baixo carboidrato, comer, com fome, fome, lanche,
     generador de recetas, inteligencia artificial, busqueda, lado del cliente, recetas, aleatorio, cocinar, cena, almuerzo, comida, bajo en carbohidratos, comer, con hambre, hambre, bocadillo,
     générateur de recettes, intelligence artificielle, ingrédients, recherche, côté client, recettes, aléatoire, cuisiner, dîner, déjeuner, repas, faible en glucides, nourriture, manger, faim, faim, collation,
